# emfcamp-schedule-api

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  deny.toml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
adapter/: Cargo.toml  README.md  default.nix
adapter/src/: main.rs  metrics.rs
adapter/src/queries/: mod.rs  now_and_next.rs  schedule.rs  venues.rs
cli/: Cargo.toml  README.md  default.nix
cli/src/: main.rs
cli/src/commands/: details.rs  full.rs  mod.rs  now_next.rs  upcoming.rs  venues.rs
cli/src/formatting/: event_listing.rs  mod.rs
client/: Cargo.toml
client/examples/: announcer.rs  announcer_long_test.rs  now_and_next.rs  schedule.rs  venues.rs
client/src/: client.rs  error.rs  lib.rs  testing.rs
client/src/announcer/: mod.rs  test.rs  utils.rs
client/src/announcer/test/: mod.rs  t02.rs  t03.rs  t04.rs  t05.rs  t06.rs  t07.rs  t08.rs  t09.rs  t10.rs  t11.rs  t12.rs  t13.rs  t14.rs  t15.rs  unit.rs
client/src/schedule/: mod.rs  now_and_next.rs
client/src/schedule/event/: mod.rs  timestamp.rs
client/src/schedule/event/kind/: mod.rs  workshop.rs
client/src/schedule/mutation/: at_venues.rs  ends_after.rs  fake_start_epoch.rs  mod.rs  sorted_by_start_time.rs  starts_after.rs  starts_before.rs
mqtt-announcer/: Cargo.toml  README.md  default.nix
mqtt-announcer/src/: main.rs  smol_event.rs
