[workspace]
resolver = "2"
members = [
  "client",

  "adapter",
  "cli",
  "mqtt-announcer",
]

[workspace.package]
license = "MIT"
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
ascii_table = "4.0.3"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["query"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "~4.4.0", features = ["derive", "env"] }
clap_complete = "~4.4.10"
derive_builder = "0.20.0"
emfcamp-schedule-api = { path = "./client/" }
metrics = "0.22.3"
metrics-exporter-prometheus = { version = "0.14.0", default-features = false, features = ["http-listener"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.24.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
termcolor = "1.4.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
