[workspace]
resolver = "2"
members = [
  "client",

  "adapter",
  "cli",
  "mqtt-announcer",
]

[workspace.package]
license = "MIT"
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
ascii_table = "=5.0.0"
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["query"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "~4.5.53", features = ["derive", "env"] }
clap_complete = "~4.5.61"
derive_builder = "0.20.2"
emfcamp-schedule-api = { path = "./client/" }
metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false, features = ["http-listener"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
termcolor = "1.4.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = { version = "2.5.7", features = ["serde"] }
