[package]
name = "emfcamp-schedule-api-adapter"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap.workspace = true
emfcamp-schedule-api.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
