[package]
name = "emfcamp-schedule-cli"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
ascii_table.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
emfcamp-schedule-api.workspace = true
termcolor.workspace = true
tokio.workspace = true
url.workspace = true
