[package]
name = "emfcamp-schedule-api"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
derive_builder.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
tracing-subscriber.workspace = true
