[package]
name = "emfcamp-schedule-mqtt-announcer"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
emfcamp-schedule-api.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
